<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <androidx.cardview.widget.CardView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        app:cardCornerRadius="22dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#0F246B">


            <TextView
                android:id="@+id/titles"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="20dp"
                android:padding="10dp"

                android:background="#0F246B"
                android:text="@string/title"
                android:textColor="@color/white"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/postId" />

            <TextView
                android:id="@+id/postBody"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="#0F246B"
                android:padding="10dp"
                android:text="@string/post_email"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="@+id/titles"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/titles"
                app:layout_constraintTop_toBottomOf="@+id/titles" />

            <TextView
                android:id="@+id/postId"
                android:layout_width="0dp"
                android:layout_marginTop="10dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="20dp"
                android:padding="10dp"
                android:text="@string/id"
                android:textColor="@color/white"
                android:background="#0F246B"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <!--            <TextView-->
            <!--                android:id="@+id/tvPost"-->
            <!--                android:layout_width="158dp"-->
            <!--                android:layout_height="75dp"-->
            <!--                android:layout_marginStart="28dp"-->
            <!--                android:layout_marginTop="12dp"-->
            <!--                android:text="TextView"-->
            <!--                app:layout_constraintStart_toStartOf="parent"-->
            <!--                app:layout_constraintTop_toTopOf="parent" />-->

            <!--            <TextView-->
            <!--                android:id="@+id/tvTittle"-->
            <!--                android:layout_width="wrap_content"-->
            <!--                android:layout_height="wrap_content"-->
            <!--                android:layout_marginTop="68dp"-->
            <!--                android:text="TextView"-->
            <!--                app:layout_constraintEnd_toEndOf="parent"-->
            <!--                app:layout_constraintHorizontal_bias="0.58"-->
            <!--                app:layout_constraintStart_toEndOf="@+id/tvPost"-->
            app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>